--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <div class="header">
-            <div class="logo">Header Logo</div>
-            <ul class="header-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
-        <div class="home">
-            <div class="hero">
-                <h1>This website is awesome</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum amet debitis cumque quae maxime quas ea corporis numquam reiciendis ab, voluptas nisi eveniet impedit perferendis reprehenderit, veritatis labore dolore atque!</p>
-                <button>Sign up</button>
+        <div class="home-section">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <ul class="header-links">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+            <div class="main">
+                <div class="hero">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <img src="./images/l.jpg" alt="L detective">
             </div>
         </div>
         <div class="info-section">
