--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
             </div>
         </div>
         <div class="info-section">
-            <h2> Some random information</h2>
-            <div class="item">
-                <img src="" alt="demo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a, voluptate quae dolorem voluptatem enim, repellat sunt voluptates voluptatibus </p>
-            </div>
-            <div class="item">
-                <img src="" alt="demo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a, voluptate quae dolorem voluptatem enim, repellat sunt voluptates voluptatibus </p>
-            </div>
-            <div class="item">
-                <img src="" alt="demo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a, voluptate quae dolorem voluptatem enim, repellat sunt voluptates voluptatibus </p>
-            </div>
-            <div class="item">
-                <img src="" alt="demo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a, voluptate quae dolorem voluptatem enim, repellat sunt voluptates voluptatibus </p>
+            <h2> Some random information.</h2>
+            <div class="content">
+                <div class="item">
+                    <img src="./images/sky-wall.jpg" alt="sky-wall">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="item">
+                    <img src="./images/sky-wall.jpg" alt="sky-wall">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="item">
+                    <img src="./images/sky-wall.jpg" alt="sky-wall">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="item">
+                    <img src="./images/sky-wall.jpg" alt="sky-wall">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
         </div>
         <div class="qoute-section">
