--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
                 </div>
             </div>
         </div>
-        <div class="qoute-section">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos similique enim obcaecati pariatur minima delectus, ducimus provident error incidunt laudantium voluptas, deserunt laborum suscipit amet harum ipsa a necessitatibus eaque?</p>
-            <span>-Hasan, software engineer</span>
+        <div class="quote-section">
+            <div class="container">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <span>-Hasan, Software engineer</span>
+            </div>
         </div>
         <div class="action-section">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, repudiandae corporis totam culpa reprehenderit veritatis, ipsa incidunt est vel, qui nobis. Nobis laborum similique doloremque, cumque sint tempora impedit labore.</p>
