--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
             </div>
         </div>
         <div class="action-section">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, repudiandae corporis totam culpa reprehenderit veritatis, ipsa incidunt est vel, qui nobis. Nobis laborum similique doloremque, cumque sint tempora impedit labore.</p>
-            <button>Sign up</button>
+            <div class="content">
+                <div class="container">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button righ over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
         <div class="footer"> Copyright@ The Odin Project 2021</div>
     </body>
