--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
                 <button>Sign up</button>
             </div>
         </div>
-        <div class="footer"> Copyright@ The Odin Project 2021</div>
+        <div class="footer"> Copyright &copy; The Odin Project 2021</div>
     </body>
 </html>
