--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="quote-section">
             <div class="container">
                 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <span>-Hasan, Software engineer</span>
+                <span>-Hasan, Software Engineer</span>
             </div>
         </div>
         <div class="action-section">
