Fix a typo in page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Lnading page</title>
+        <title>Landing page</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
